syntax = "proto3";

package crm;

option go_package = "github.com/2group/2sales.core-service/pkg/gen/go/advertisement;advertisementv1";

service AdvertisementService {
    rpc CreateBanner (CreateBannerRequest) returns (CreateBannerResponse);
    rpc ListBanners (ListBannersRequest) returns (ListBannersResponse);
}

message BannerModel {
    int64 banner_id = 1;
    string name = 2;
    optional string description = 3;
    string image_url = 4;
    optional string target_url = 5;
    bool is_active = 6;
    int32 display_order = 7;
}

message CreateBannerRequest {
    BannerModel banner = 1;
}

message CreateBannerResponse {
    BannerModel banner = 1;
}

message ListBannersRequest {
    bool is_active = 1;
}

message ListBannersResponse {
    repeated BannerModel banners = 1;
}